tests/neg/yimports-nosuch.scala
//> using options -Yimports:skala,scala.Predeff
//
class C
// nopos-error
// nopos-error
